<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="title_buildings">Buildings</string>
    <string name="title_tenants">Tenants</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_settings">Settings</string>
    <string name="title_logo">Company Logo</string>
    <string name="title_company_info">Company Information</string>
    <string name="title_company_signature">Company Signature</string>
    <string name="title_language">Language, Currency, Date Format</string>
    <string name="title_templates">Invoice and Reciept Templates</string>
    <string name="title_taxes">Income Taxes</string>
    <string name="title_backup">Backup/Restore Database</string>
    <string name="tenant_name">Tenant Name</string>
    <string name="primary_phone">Primary Phone</string>
    <string name="secondary_phone">Secondary Phone</string>
    <string name="email">Email</string>
    <string name="house_name">House Name</string>
    <string name="date_occupied">Date Occupied</string>
    <string name="date_vacated">Date Vacated</string>
    <string name="save">Save</string>
    <string name="add_tenant">Add Tenant</string>
    <string name="building_image">Building Image</string>
    <string name="title_add_tax">Add Tax</string>
    <string name="error_tenant_not_found">Tenant not found.</string>
   <string name="app_logo">App Logo</string>
    <string name="app_name">Neogreen Rentals</string>
    <string name="app_subtitle">Where whales meet ice</string>
    <string name="title_rent_payment">Rent Payments</string>
   <string name="total_amount_format">Total: $%.2f</string>
</resources>

